--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,18 @@
     <link rel="manifest" href="manifest.json">
   </head>
   <body>
-    <h1 class="vertical-container">Hello World</h1>
+    <h1 class="vertical-container">Duy Tran Demo</h1>
     <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
     <script>
       // Initialize Firebase
       var config = {
-        apiKey: "AIzaSyAXK4Orxl2CghIQvKiUPtkhEngSgzteqE0",
-        authDomain: "hello-world-pwa-8669c.firebaseapp.com",
-        databaseURL: "https://hello-world-pwa-8669c.firebaseio.com",
-        projectId: "hello-world-pwa-8669c",
-        storageBucket: "hello-world-pwa-8669c.appspot.com",
-        messagingSenderId: "660239288739"
+        apiKey: "AIzaSyBJYyENfgmKQSQsE8D6W6n_Z1p282ZZc1M",
+        authDomain: "fir-pwa-fd3e4.firebaseapp.com",
+        projectId: "fir-pwa-fd3e4",
+        storageBucket: "fir-pwa-fd3e4.appspot.com",
+        messagingSenderId: "696056207587",
+        appId: "1:696056207587:web:e2d3f830dff7c703a44dd6",
+        measurementId: "G-XYPJ6DTKMK"
       };
       firebase.initializeApp(config);
     </script>
