--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#008000" />
     <title>My hello world page</title>
-    <link rel="stylesheet" type="text/css" href="hello-world.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="style.css" media="all" />
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
