--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,20 @@
           <div class="block"></div>
           <div class="block"></div>
           <div class="block"></div>
-          <div id="a" class="block"></div>
+          <div class="block"></div>
+          <div class="block"></div>
+          <div class="block"></div>
+          <div class="block"></div>
+          <div class="block"></div>
+          <div class="block"></div>
+          <div class="block"></div>
+          <div class="block"></div>
           <div id="line0" class="line"></div>
           <div id="line1" class="line"></div>
+          <div id="line4" class="line"></div>
           <div id="line2" class="line"></div>
           <div id="line3" class="line"></div>
+          <div id="line5" class="line"></div>
         </div>
       </div>
       <div id="start_screen">
