--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
-    <h1 class="vertical-container">Welcome to Duy Tran's PWA Demo</h1>
+    <h1 class="vertical-container">TIC TAC TOE GAME</h1>
     <div id="wrap">
       <div id="body">
         <div class="game_area">
